--- a/css/hero.css
+++ b/css/hero.css
@@ -53,13 +53,13 @@
   top: 0;
   width: 100%;
   height: 100svh;
+  padding-bottom: 50px;
 }
 
 .hero__content {
   display: flex;
   justify-content: space-between;
   align-items: end;
-  padding: 50px 0;
   width: 100%;
   z-index: 2;
   position: relative;
