--- a/css/card.css
+++ b/css/card.css
@@ -110,7 +110,7 @@
 }
 
 .card.card-1 .card__title {
-  max-width: 402px;
+  max-width: 420px;
 }
 
 .card.card-2 .card__title {
@@ -360,7 +360,20 @@
     border-radius: 60px;
     justify-content: start;
     height: 755px;
-    max-height: 65vh;
+    max-height: 75vh;
+  }
+
+  .card.card-3::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.05);
+    z-index: 1;
   }
 
   .card__advantage {
@@ -440,5 +453,25 @@
 
   .card-3 .card__parameter:last-child {
     display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .card.card-1 .card__image {
+    width: 150%;
+    left: 40%;
+    right: unset;
+    transform: translateX(-50%);
+  }
+
+  .card.card-3 .card__image {
+    width: 140%;
+    left: 38%;
+    right: unset;
+    transform: translateX(-50%);
+  }
+
+  .card.card-2 .card__bg {
+    opacity: 0.6;
   }
 }
