--- a/css/card.css
+++ b/css/card.css
@@ -8,7 +8,6 @@
   justify-content: space-between;
   height: 640px;
   overflow: hidden;
-  max-height: 75vh;
   display: flex;
   flex-direction: column;
 }
@@ -307,10 +306,6 @@
 }
 
 @media (min-width: 900px) and (max-height: 768px) {
-  .card {
-    height: 400px;
-  }
-
   .card__title {
     font-size: 24px;
     margin-bottom: 20px;
@@ -360,7 +355,24 @@
     border-radius: 60px;
     justify-content: start;
     height: 755px;
-    max-height: 75vh;
+  }
+
+  .card.card-2::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #131313 0%, #000 100%);
+    z-index: 1;
+  }
+
+  .card.card-2 .card__image,
+  .card.card-2 .card__bg {
+    z-index: 2;
   }
 
   .card.card-3::before {
@@ -368,11 +380,14 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.05);
+    background: linear-gradient(
+      360deg,
+      rgba(17, 17, 17, 0) 46.15%,
+      #111 72.12%
+    );
     z-index: 1;
   }
 
@@ -454,24 +469,30 @@
   .card-3 .card__parameter:last-child {
     display: none;
   }
-}
 
-@media (max-width: 600px) {
   .card.card-1 .card__image {
-    width: 150%;
-    left: 40%;
-    right: unset;
-    transform: translateX(-50%);
+    width: 100%;
+    height: 440px;
+  }
+
+  .card.card-2 .card__image {
+    width: 100%;
+    height: 510px;
   }
 
   .card.card-3 .card__image {
-    width: 140%;
-    left: 38%;
-    right: unset;
-    transform: translateX(-50%);
+    width: 100%;
+    height: 550px;
+  }
+
+  .card.card-3 .card__image {
+    width: 100%;
+    height: 550px;
   }
 
   .card.card-2 .card__bg {
-    opacity: 0.6;
+    opacity: 0.8;
+    height: 100%;
+    width: 100%;
   }
 }
